source/stylesheets/_blog.scss
/* ... */
.body-blog {
  .article-header,
  section {
    max-width: $width-medium;
    margin: 0 auto 64px auto;
    // average out until there is much more accurate way

    h1,
    h2,
    h3,
    h5,
    h6,
    p {
      max-width: 100%;
      width: 100%;
    }

    .intro {
      margin: 0 0 16px 0;
      padding: 0;
    }

    .brief {
      margin: 0 0 17px 0;
    }
  }

  .article-content {
    sup {
      font-size: 65%;
      padding-left: 4px;
      color: $color-text--faded;
    }

    .image {
      width: 50%;
      margin: 30px 0 25px 0;

      img {
        width: calc(100vw - 40px);
        max-width: $width-medium;
        margin: 0;
        height: auto;
      }

      h4 {
        width: calc(100vw - 40px);
        max-width: $width-medium;
        color: $color-text--faded;
        font-weight: 300;
        margin: 12px 0 0 0;
        text-align: center;
        line-height: 142%;

        a {
          color: $color-text--faded;
          text-decoration: underline;

          &:hover {
            color: #000;
          }
        }
      }
    }

    .footnotes {
      border: 3px solid $color-grey4;
      padding: 0 32px 32px 32px;
      li {
        font-size: 75%;
      }
    }

    .image--left {
      @media (min-width: $width-xlarge) {
        margin: 30px 40px 25px -140px;
        float: left;

        div {
          float: right;
        }
      }
    }

    .image--right {
      @media (min-width: $width-xlarge) {
        margin: 30px -140px 25px 40px;
        float: right;

        div {
          float: left;
        }
      }
    }

    @media (min-width: $width-xlarge) {
      .sidenote {
        float: right;
        width: 300px;
        margin: -24px -200px 32px 32px;
        padding: 24px;
        background: $color-grey4;

        p,
        li {
          font-size: 14px;
        }
        h3 {
          margin: 0 0 16px 0;
        }
      }
    }

    .quote {
      position: relative;
      margin: 30px 0 32px -20px;
      padding: 10px 30px 7px 30px;

      p {
        margin: 0 0 20px 0;
        padding: 0;
        font-size: 20px;
        line-height: 150%;
        font-style: italic;
        color: $color-text--faded;
      }

      p:last-child {
        margin: 0;
      }

      &:before {
        content: "";
        position: absolute;
        top: 0;
        left: 0;
        width: 8px;
        height: 100%;
        background: #d6dfe9;
        border-radius: 0 2px 2px 0;
      }

      @media (min-width: 728px) {
        // 688 + 20 + 20
        margin: 30px 0 32px 0;

        &:before {
          border-radius: 2px;
        }
      }
    }
  }

  .separators {
    position: relative;
    margin: 54px auto 59px auto;
  }

  .separators,
  .separators:before,
  .separators:after {
    width: 6px;
    height: 6px;
    background: $color-text;
    border-radius: 50%;
  }

  .separators:before {
    content: "";
    position: absolute;
    left: -32px;
  }

  .separators:after {
    content: "";
    position: absolute;
    left: 32px;
  }

  ol {
    padding-left: 30px;
  }

  .article-header {
    margin-bottom: 59px;

    .article-header--details {
      margin: 0 0 16px 0;
      @include article-details;

      @media (min-width: $width-large) {
        margin: 0 0 14px 0;
      }
    }
  }
}

.image--cover .image--wide,
.image--contain {
  h4 {
    text-align: center;
    line-height: 150%;
  }
}
.image--cover {
  max-width: 100%;
}
.image--wide {
  max-width: $width-xlarge;
  margin-right: auto;
  margin-bottom: 64px;
  margin-left: auto;
  text-align: center;
}
.image--contain {
  max-width: $width-medium;
  margin-right: auto;
  margin-bottom: 64px;
  margin-left: auto;
}
img {
  max-width: 100%;
}

// General
.d-block {
  display: block;
}
// Size
.h-20px {
  height: 20px;
}
.mw-full {
  max-width: 100%;
}
.mw-600px {
  max-width: 600px;
}
.mw-medium {
  max-width: $width-medium;
}
.mw-xlarge {
  max-width: $width-xlarge;
}
// Spacing
.m-0 {
  margin: 0;
}
.mb-0 {
  margin-bottom: 0px;
}
.mb-60px {
  margin-bottom: 60px;
}
.mb-48px {
  margin-bottom: 48px;
}
.mx-auto {
  margin-right: auto;
  margin-left: auto;
}
.mb-medium {
  margin-bottom: 16px;
}
.p-20px {
  padding: 20px;
}
.p-40px {
  padding: 40px;
}
.py-40px {
  padding-top: 40px;
  padding-bottom: 40px;
}
// Typography
.fs-small {
  font-size: 14px;
}
.fs-medium {
  font-size: 16px;
}
.fs-large {
  font-size: 20px;
}
.fs-xlarge {
  font-size: 24px;
}
.lh-168pt {
  line-height: 168%;
}
// Border
.bt {
  border-top: 1px solid;
}
.bb {
  border-bottom: 1px solid;
}
.btc-gray-light {
  border-top-color: $color-grey4;
}
.bbc-gray-light {
  border-bottom-color: $color-grey4;
}
// Background color
.bg-dark-blue {
  background-color: #0a2e52;
}

.video {
  max-width: $width-xlarge;
  margin: 0 auto;
  margin-bottom: 32px;
}

.video-wrapper {
  position: relative;
  overflow: hidden;
  height: 0;
  padding-bottom: 56.25%;
}

.video-iframe {
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
}

.video-caption {
  text-align: center;
}

@media (min-width: $width-large) {
  .d-none-large {
    display: none;
  }
  .fs-small-large {
    font-size: 14px;
  }
  .d-flex-large {
    display: flex;
  }
  .f-wrap-large {
    flex: wrap;
  }
  .w-50pt-large {
    width: 50%;
  }
  .m-0-large {
    margin: 0;
  }
  .mx-auto-large {
    margin-right: auto;
    margin-left: auto;
  }
  .mr-45pt-large {
    margin-right: 45%;
  }
  .pt-80px-large {
    padding-top: 80px;
  }
  .px-0px-large {
    padding-right: 0px;
    padding-left: 0px;
  }
  .pr-24px-large {
    padding-right: 24px;
  }
  .pl-24px-large {
    padding-left: 24px;
  }
}

